web/css/cod.css
/*
Table of Contents (order of these sections is significant)
    @media all (default styles or everything)
    @media screen (changes for screen only)
    @media print  (changes for printing only)
*/

@media all {
    .full{
        width: 100%;
    }
    .half{
        width: 48.5%;
    }
    .third{
        width: 32%;
    }
    .state_Act {
        background-color: #FCC;
    }
    .state_Escalating {
        background-color: #CFC;
    }
    .state_Tier2 {
        background-color: #FFC;
    }
    .state_Closed {
        background-color: #EEE;
    }
    div.minor{
        float: left;
    }
    .clickme{
        cursor: pointer;
    }
    .clickable{
        cursor: pointer;
    }
    .clickable:hover{
        background-color: #FEF;
    }
    .highlight {
        background-color: #EDE !important;
    }
    
    .tile_row {
        width: 100%;
    }
    .tile_block {
        display: inline-block;
        vertical-align:top;
    }

    th.vertical{
        width: 10em;
    }

    textarea {
        min-height: 7em;
    }
    
    #tools-app-title-bar-right {
        text-align: right;
    }

    #last-updated {
        display: inline-block;
        padding-top: 1em;
        padding-right: 1em;
    }

    #item_control_tile{
        float: right;
    }
    #item_header {
        padding-left: 1em;
        padding-right: 2em;
    }
    #item_header * {
        font-size: medium;
    }
    #item_header .tile_block {
        margin-bottom: 15px;
        margin-right: 10px;
    }
    #item_header .label {
        margin-top: .2em;
    }
    #item_header .label * {
        font-size: small;
    }
    .long {
        min-width: 15em;
    }
    .short {
        min-width: 5em;
    }
    .xshort {
        min-width: 3em;
    }
    .box {
        border: 1px solid #CCC;
        padding: 4px;
        min-height: 1em;
    }
    .version {
        padding-left: .5em;
        font-size: small;
        color: #AAA;
    }
    #contact-tools {
        display: none;
    }
    #codActions {
        text-align: right;
        padding-bottom: .75em;
    }
    #tools-content {
        padding-top: .75em;
    }
}

@media print {
    /* ANY CHANGES FOR PRINTED PAGES */
}

